syntax = "proto3";

option go_package = ".;recurringpb";

package entity;

message XSollaUser {
    string id = 1;
    string ip = 2;
    string phone = 3;
    string email = 4;
    string name = 5;
    string country = 6;
}

message XSollaVirtualCurrency {
    string name = 1;
    string sku = 2;
    int32 quantity = 3;
    string currency = 4;
    double amount = 5;
}

message XSollaPurchase {
    XSollaVirtualCurrency virtual_currency = 1;
    XSollaCheckout checkout = 2;
    XSollaVirtualItems virtual_items = 3;
    XSollaTotal total = 4;
}

message XSollaCheckout {
    string currency = 1;
    double amount = 2;
}

message XSollaItem {
    string sku = 1;
    double amount = 2;
}

message XSollaVirtualItems {
    repeated XSollaItem items = 1;
    string currency = 2;
    double amount = 3;
}

message XSollaTotal {
    string currency = 1;
    double amount = 2;
}

message XSollaCheckNotification {
    string notification_type = 1;
    XSollaUser user = 2;
}

message XSollaTransaction {
    string id = 1;
    string external_id = 2;
    string payment_date = 3;
    string payment_method = 4;
    int32 dry_run = 5;
}

message XSollaPayment {
    string currency = 1;
    double amount = 2;
}

message XSollaVat {
    string currency = 1;
    double amount = 2;
}

message XSollaPayout {
    string currency = 1;
    double amount = 2;
}

message XSollaXsollaFee {
    string currency = 1;
    double amount = 2;
}

message XSollaPaymentMethodFee {
    string currency = 1;
    double amount = 2;
}

message XSollaRepatriationCommission {
    string currency = 1;
    double amount = 2;
}

message XSollaPaymentDetails {
    XSollaPayment payment = 1;
    XSollaVat vat = 2;
    double payout_currency_rate = 3;
    XSollaPayout payout = 4;
    XSollaXsollaFee xsolla_fee = 5;
    XSollaPaymentMethodFee payment_method_fee = 6;
    XSollaRepatriationCommission repatriation_commission = 7;
}

message XSollaPaymentNotification {
    string notification_type = 1;
    XSollaPurchase purchase = 2;
    XSollaUser user = 3;
    XSollaTransaction transaction = 4;
    XSollaPaymentDetails payment_details = 5;
    map<string, string> custom_parameters = 6;
}